- rehuff - http://wiki.xiph.org/Rehuff
- SQLite 3.21.0 - http://www.sqlite.org
- Tidy 5.4.0 - http://www.html-tidy.org
- TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
- UPX 3.94 - https://upx.github.io
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


X.XX - YYYY
- New HTTPS enabled website at https://nikkhokkho.sourceforge.io.
- Switched code to support HTTP and HTTPS.
- Added integrated ads display, since some users wanted to support FileOptimizer and do not have Paypal. You can remove if you want.
- Added HideAds=false INI setting to remove ads.
- Added GUI option to remove ads.
- Disabled/deprecated themes because they are not stable. I will remove all asociated code in next release.
- Reduced reminder frequency.
- Workarrounded ImageMagick GIF processing flags (Devedse).
- Fixed default process priority set to idle, even if it should be normal (RejZoR).
- Avoided m7zRepacker treating .exe files.
- Updated Leanify to 0.4.3.208 daily binaries.
- Updated ffmpeg to 3.3.4 (TPS).
- Updated ImageMagick flags (Devedse).
- Updated ImageMagick to 7.0.7.9 with HDRI support.
- Updated SQLite to 3.21.0 x86 and x64 Visual C++ 2017 custom builds.
- Updated pingo to 0.92e x86 and x64 versions.
- Tested with Windows 10 Fall Creators Update.
- Tested with wine 2 under GalliumOS 2.1 / lubuntu 16.10.
- Some minor optimizations and code cleanup.


11.20 - 2017/10/12
- Added 7-Zip (.7z) support with m7zRepacker.
- Improved donator information (Peni).
- Improved APNG compression adding ECT and pingo.
- Improved PNG 9-patch compression adding pingo.
- Added more supported extensions (.mzz, .rll).
- Made restore default settings smoother.
- Updated to ECT 0.8.2 (9290a5cf7ea0) x86 and x64 daily optimized builds (thanks przemoc).
- Updated Leanify to 0.4.3.195 daily binaries.
- Updated Ghostscript to 9.22.
- Updated pingo to 0.92 x86 and x64 versions.
- Updated ImageMagick to 7.0.7.6 with HDRI support.