@@ -164,11 +164,12 @@ ndo
 
 
 X.XX - YYYY
-- New HTTPS enabled website at https://nikkhokkho.sourceforge.io.
+- Moved to a new HTTPS enabled website at https://nikkhokkho.sourceforge.io.
 - Switched code to support HTTP and HTTPS.
 - Added integrated ads display, since some users wanted to support FileOptimizer and do not have Paypal. You can remove if you want.
 - Added HideAds=false INI setting to remove ads.
 - Added GUI option to remove ads.
+- Disabled Windows error handling, so when a plugin crashes, FileOptimizer execution does not get stopped (Garret Wilson and others).
 - Disabled/deprecated themes because they are not stable. I will remove all asociated code in next release.
 - Reduced reminder frequency.
 - Workarrounded ImageMagick GIF processing flags (Devedse).
